--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ code {
   width: 10vw;
   size: absolute;
   transform: scale(75%) translate(0%, -125%);
+  transition: top 0.35s linear, left 0.35s linear, transform 0.35s linear;
 }
 .building{
   position: absolute;
