--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,9 @@ code {
   size: absolute;
   transform: scale(75%) translate(0%, -125%);
 }
+
+.splashscreen {
+  position: absolute;
+  position: center;
+  size: 75%;
+}
