--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@ code {
     monospace;
 }
 
-
 .world {
   position: relative;
   min-height: calc(100vw * (1/3))
@@ -41,8 +40,22 @@ code {
   transform: scale(75%) translate(0%, -125%);
 }
 
-.splashscreen {
+
+/* .splashScreen {
   position: absolute;
-  position: center;
-  size: 75%;
+  size: 100%;
+}
+
+.titleLogo {
+  position:absolute;
+  size:100%;
+} */
+
+.modal-dialog{
+  width: 100%;
+  max-width: 1200px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
